Avoid connect issues with NDEBUG beging defined when Qt thinks we're in release mode.

The offending Qt lines are here:
#if !defined(Q_ASSERT)
#  if defined(QT_NO_DEBUG) && !defined(QT_FORCE_ASSERTS)
#    define Q_ASSERT(cond) static_cast<void>(false && (cond))
#  else
#    define Q_ASSERT(cond) ((cond) ? static_cast<void>(0) : qt_assert(#cond, __FILE__, __LINE__))
#  endif
#endif

The expression static_cast<void>(false && (cond)) is produced when qt thinks this Q_ASSERT should be disabled. Since it this is a nop Q_ASSERT should not containing anything that has side effects as a parameter.

BUG:436958
FIXED-IN:1.9.1